--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "react-addons-update": "^15.6.2",
     "react-native": "0.59.8",
     "react-native-gesture-handler": "^1.2.1",
+    "react-native-google-places": "^3.0.5",
     "react-native-maps": "^0.24.2",
     "react-native-router-flux": "^3.39.1",
     "react-native-screens": "^1.0.0-alpha.22",
+    "react-native-vector-icons": "^6.5.0",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.0.3",
     "redux": "^4.0.1",
