--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -145,6 +145,7 @@ dependencies {
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation project(':react-native-maps')
     implementation  project(':react-native-vector-icons')
+    implementation project(':react-native-google-places')
 }
 
 // Run this once to be able to run the application with BUCK
