--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -16,3 +16,7 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+RNGP_ANDROID_API_KEY=AIzaSyCcMfQAoXEn-AR5v91zlcW7JO4k5pU81_M 
+
+
