--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -5,4 +5,7 @@ project(':react-native-maps').projectDir = new File(rootProject.projectDir, '../
 include ':react-native-vector-icons'
 project(':react-native-vector-icons').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-vector-icons/android')
 
+include ':react-native-google-places'
+project(':react-native-google-places').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-google-places/android')
+
 include ':app'
