create action to get distance between two places and then calculate fare by multiply distance to 0.005

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -17,6 +17,7 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-RNGP_ANDROID_API_KEY=AIzaSyCJgAhnCMahmqG0daZluMFTaHNTI8XrrEs
+RNGP_ANDROID_API_KEY=AIzaSyDUYbTR-3PDWPhgxjENs4yf35g2eHc641s
+# AIzaSyCJgAhnCMahmqG0daZluMFTaHNTI8XrrEs
 
 
