--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
   package="com.taxi">
 
     <uses-permission android:name="android.permission.INTERNET" />
-     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <application
       android:name=".MainApplication"
@@ -24,9 +24,11 @@
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCJgAhnCMahmqG0daZluMFTaHNTI8XrrEs"/>
+            android:value="AIzaSyDUYbTR-3PDWPhgxjENs4yf35g2eHc641s"/>
 
 
     </application>
 
 </manifest>
+
+<!-- AIzaSyCJgAhnCMahmqG0daZluMFTaHNTI8XrrEs -->
