--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -146,6 +146,7 @@ dependencies {
     implementation project(':react-native-maps')
     implementation  project(':react-native-vector-icons')
     implementation project(':react-native-google-places')
+    implementation project(':react-native-spinkit')
 }
 
 // Run this once to be able to run the application with BUCK
