--- a/android/build.gradle
+++ b/android/build.gradle
@@ -32,6 +32,9 @@ allprojects {
             url "$rootDir/../node_modules/react-native/android"
         }
         maven {
+                      url "https://jitpack.io"
+                   }
+        maven {
             url "https://maven.google.com"
         }
     }
