--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -8,4 +8,6 @@ project(':react-native-vector-icons').projectDir = new File(rootProject.projectD
 include ':react-native-google-places'
 project(':react-native-google-places').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-google-places/android')
 
+include ':react-native-spinkit'
+project(':react-native-spinkit').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-spinkit/android')
 include ':app'
