--- a/package.json
+++ b/package.json
@@ -18,11 +18,16 @@
     "react-native-maps": "^0.24.2",
     "react-native-router-flux": "^3.39.1",
     "react-native-screens": "^1.0.0-alpha.22",
+    "react-native-spinkit": "^1.3.0",
+    "react-native-star-rating": "^1.1.0",
     "react-native-vector-icons": "^6.5.0",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.0.3",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-socket.io": "^1.4.0",
+    "redux-thunk": "^2.3.0",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
